--- a/src/widgets/table-with-search/table-with-search.module.scss
+++ b/src/widgets/table-with-search/table-with-search.module.scss
@@ -3,3 +3,18 @@
   flex-direction: column;
   gap: 0.75rem;
 }
+
+.noResults {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2.375rem;
+  margin-top: 9.375rem;
+
+  p {
+    font-family: Montserrat, serif;
+    font-weight: 500;
+    font-size: 1.125rem;
+    line-height: 1.22;
+  }
+}
