style: add correct font-family fallback

--- a/src/features/search-input/search-input.module.scss
+++ b/src/features/search-input/search-input.module.scss
@@ -1,5 +1,5 @@
 .root {
-  font-family: Roboto, serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 0.875rem;
   color: #d1d1d1;
