--- a/src/shared/ui/button/button.module.scss
+++ b/src/shared/ui/button/button.module.scss
@@ -1,5 +1,5 @@
 .button {
-  font-family: Montserrat, serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   color: #ffffff;
   font-size: 0.75rem;
