--- a/src/shared/ui/title/title.module.scss
+++ b/src/shared/ui/title/title.module.scss
@@ -1,5 +1,5 @@
 .title {
-  font-family: 'Montserrat', serif;
+  font-family: 'Montserrat', sans-serif;
   font-optical-sizing: auto;
   font-size: 1.625rem;
   font-weight: 700;
