--- a/src/features/table/table.module.scss
+++ b/src/features/table/table.module.scss
@@ -1,6 +1,6 @@
 .table {
   width: 100%;
-  font-family: Roboto, serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 0.75rem;
   font-weight: 400;
   line-height: 1.17;
