--- a/src/shared/ui/subtitle/subtitle.module.scss
+++ b/src/shared/ui/subtitle/subtitle.module.scss
@@ -1,5 +1,5 @@
 .subtitle {
-  font-family: Montserrat, serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 0.875rem;
   line-height: 1.2;
