--- a/src/widgets/table-with-search/table-with-search.module.scss
+++ b/src/widgets/table-with-search/table-with-search.module.scss
@@ -12,7 +12,7 @@
   margin-top: 9.375rem;
 
   p {
-    font-family: Montserrat, serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 1.125rem;
     line-height: 1.22;
